--- a/index.html
+++ b/index.html
@@ -106,40 +106,40 @@
           </p>
         </div>
         <div class="projects">
-          <a href="#">
+          <a href="#" target="_blank">
             <img
               src="Imágenes/imagenes verdes/programadora.svg"
               alt="mujer programando"
             />
             <figcaption>Portfolio</figcaption>
           </a>
-          <a href="#">
+          <a href="#" target="_blank">
             <img src="Imágenes/imagenes verdes/memes.svg" alt="mujeres memes" />
             <figcaption>Generador de memes</figcaption>
           </a>
-          <a href="#">
+          <a href="#" target="_blank">
             <img src="Imágenes/imagenes verdes/match3.svg" alt="games" />
             <figcaption>Match 3</figcaption>
           </a>
-          <a href="#">
+          <a href="#" target="_blank">
             <img
               src="Imágenes/imagenes verdes/controlador de gastos.svg"
               alt="mujer estadisticas"
             />
             <figcaption>Controlador de gastos</figcaption>
           </a>
-          <a href="#">
+          <a href="#" target="_blank">
             <img
               src="Imágenes/imagenes verdes/administradora de reuniones.svg"
               alt="mujer con reloj"
             />
             <figcaption>Administrador de reuniones</figcaption>
           </a>
-          <a href="#">
+          <a href="#" target="_blank">
             <img src="Imágenes/imagenes verdes/appsvg.svg" alt="celular app" />
             <figcaption>Todo app</figcaption>
           </a>
-          <a href="#" id="movie">
+          <a href="#" target="_blank">
             <img
               src="Imágenes/imagenes verdes/movie.svg"
               alt="noche de peliculas"
@@ -162,7 +162,7 @@
                 <div>
                   <li>
                     <a
-                      href="https://twitter.com/saidman_natalia"
+                      href="https://twitter.com/saidman_natalia" target="_blank"
                       class="social-link"
                     >
                       <i class="fa-brands fa-twitter"></i>@saidman_natalia</a
@@ -170,7 +170,7 @@
                   </li>
                   <li>
                     <a
-                      href="https://github.com/NataliaSaidman"
+                      href="https://github.com/NataliaSaidman" target="_blank"
                       class="social-link"
                       ><i class="fa-brands fa-github-alt"></i>NataliaSaidman</a
                     >
@@ -179,7 +179,7 @@
                 <div>
                   <li>
                     <a
-                      href="https://www.linkedin.com/in/natalia-saidman-29879a242/"
+                      href="https://www.linkedin.com/in/natalia-saidman-29879a242/" target="_blank"
                       class="social-link"
                     >
                       <i class="fa-brands fa-linkedin-in"></i>Natalia Saidman</a
@@ -187,7 +187,7 @@
                   </li>
                   <li>
                     <a
-                      href="mailto:licnataliasaidman@gmail.com"
+                      href="mailto:licnataliasaidman@gmail.com" target="_blank"
                       class="social-link"
                       ><i class="fa-solid fa-envelope"></i
                       >licnataliasaidman@gmail.com</a
@@ -259,28 +259,28 @@
         <ul>
           <li>
             <div class="link-red">
-              <a href="https://twitter.com/saidman_natalia"
+              <a href="https://twitter.com/saidman_natalia" target="_blank"
                 ><i class="fa-brands fa-twitter"></i
               ></a>
             </div>
           </li>
           <li>
             <div class="link-red">
-              <a href="https://github.com/NataliaSaidman"
+              <a href="https://github.com/NataliaSaidman" target="_blank"
                 ><i class="fa-brands fa-github-alt"></i
               ></a>
             </div>
           </li>
           <li>
             <div class="link-red">
-              <a href="https://www.linkedin.com/in/natalia-saidman-29879a242/"
+              <a href="https://www.linkedin.com/in/natalia-saidman-29879a242/" target="_blank"
                 ><i class="fa-brands fa-linkedin-in"></i
               ></a>
             </div>
           </li>
           <li>
             <div class="link-red">
-              <a href="mailto:licnataliasaidman@gmail.com"
+              <a href="mailto:licnataliasaidman@gmail.com" target="_blank"
                 ><i class="fa-solid fa-envelope"></i
               ></a>
             </div>
