--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
     </header>
     <main>
       <section class="hero" id="holaID">
-          <div class="presentation">
-            <h2>¡Hola! Soy</h2>
-            <h1>Natalia Saidman</h1>
-            <p>Desarrolladora, Lic. en Nutrición y fan de los juegos de mesa</p>
-            <a href="#proyectosID" class="button">LO QUE HAGO</a>
-          </div>
-          <figure>
-            <img src="Imágenes/hero.jpeg" alt="mujer programando" />
-          </figure>
+        <div class="presentation">
+          <h2>¡Hola! Soy</h2>
+          <h1>Natalia Saidman</h1>
+          <p>Desarrolladora, Lic. en Nutrición y fan de los juegos de mesa</p>
+          <a href="#proyectosID" class="button">LO QUE HAGO</a>
+        </div>
+        <figure>
+          <img src="Imágenes/hero.jpeg" alt="mujer programando" />
+        </figure>
       </section>
 
       <section class="section-knowledge" id="conocimientosID">
@@ -91,7 +91,7 @@
         <div class="container">
           <img
             src="Imágenes/image_processing20200119-22208-1tbdbxc.gif"
-            alt="mujer con computadora"
+            alt="gif mujer con computadora"
           />
         </div>
       </section>
@@ -109,16 +109,19 @@
           <a href="#" target="_blank">
             <img
               src="Imágenes/imagenes verdes/programadora.svg"
-              alt="mujer programando"
+              alt="mujer sobre escritorio con computadora"
             />
             <figcaption>Portfolio</figcaption>
           </a>
           <a href="#" target="_blank">
-            <img src="Imágenes/imagenes verdes/memes.svg" alt="mujeres memes" />
+            <img
+              src="Imágenes/imagenes verdes/memes.svg"
+              alt="mujeres con guitarra y cámara"
+            />
             <figcaption>Generador de memes</figcaption>
           </a>
           <a href="#" target="_blank">
-            <img src="Imágenes/imagenes verdes/match3.svg" alt="games" />
+            <img src="Imágenes/imagenes verdes/match3.svg" alt="joystick" />
             <figcaption>Match 3</figcaption>
           </a>
           <a href="#" target="_blank">
@@ -142,7 +145,7 @@
           <a href="#" target="_blank">
             <img
               src="Imágenes/imagenes verdes/movie.svg"
-              alt="noche de peliculas"
+              alt="mujeres mirando películas"
             />
             <figcaption>Buscador de películas</figcaption>
           </a>
@@ -152,17 +155,18 @@
       <section class="section-contact" id="contactoID">
         <div class="box-contact">
           <div class="contact">
-              <h2>Contactame</h2>
-              <p>
-                Para conocerme más y ponerse en contacto conmigo, me encuentran a través de mis
-                redes sociales.
-              </p>
+            <h2>Contactame</h2>
+            <p>
+              Para conocerme más y ponerse en contacto conmigo, me encuentran a
+              través de mis redes sociales.
+            </p>
             <div class="social-networks">
               <ul>
                 <div>
                   <li>
                     <a
-                      href="https://twitter.com/saidman_natalia" target="_blank"
+                      href="https://twitter.com/saidman_natalia"
+                      target="_blank"
                       class="social-link"
                     >
                       <i class="fa-brands fa-twitter"></i>@saidman_natalia</a
@@ -170,7 +174,8 @@
                   </li>
                   <li>
                     <a
-                      href="https://github.com/NataliaSaidman" target="_blank"
+                      href="https://github.com/NataliaSaidman"
+                      target="_blank"
                       class="social-link"
                       ><i class="fa-brands fa-github-alt"></i>NataliaSaidman</a
                     >
@@ -179,7 +184,8 @@
                 <div>
                   <li>
                     <a
-                      href="https://www.linkedin.com/in/natalia-saidman-29879a242/" target="_blank"
+                      href="https://www.linkedin.com/in/natalia-saidman-29879a242/"
+                      target="_blank"
                       class="social-link"
                     >
                       <i class="fa-brands fa-linkedin-in"></i>Natalia Saidman</a
@@ -187,7 +193,8 @@
                   </li>
                   <li>
                     <a
-                      href="mailto:licnataliasaidman@gmail.com" target="_blank"
+                      href="mailto:licnataliasaidman@gmail.com"
+                      target="_blank"
                       class="social-link"
                       ><i class="fa-solid fa-envelope"></i
                       >licnataliasaidman@gmail.com</a
@@ -273,7 +280,9 @@
           </li>
           <li>
             <div class="link-red">
-              <a href="https://www.linkedin.com/in/natalia-saidman-29879a242/" target="_blank"
+              <a
+                href="https://www.linkedin.com/in/natalia-saidman-29879a242/"
+                target="_blank"
                 ><i class="fa-brands fa-linkedin-in"></i
               ></a>
             </div>
