orden grilla proyectos

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <a href="#proyectosID" class="button">LO QUE HAGO</a>
         </div>
         <figure>
-          <img src="Imágenes/hero.jpeg" alt="mujer programando" />
+          <img src="imagenes/hero.jpeg" alt="mujer programando" />
         </figure>
       </section>
 
@@ -90,7 +90,7 @@
         </div>
         <div class="container">
           <img
-            src="Imágenes/image_processing20200119-22208-1tbdbxc.gif"
+            src="imagenes/cita.gif"
             alt="gif mujer con computadora"
           />
         </div>
@@ -108,43 +108,43 @@
         <div class="projects">
           <a href="#" target="_blank">
             <img
-              src="Imágenes/imagenes verdes/programadora.svg"
+              src="imagenes/imagenes proyectos/programadora.svg"
               alt="mujer sobre escritorio con computadora"
             />
             <figcaption>Portfolio</figcaption>
           </a>
           <a href="#" target="_blank">
             <img
-              src="Imágenes/imagenes verdes/memes.svg"
+              src="imagenes/imagenes proyectos/memes.svg"
               alt="mujeres con guitarra y cámara"
             />
             <figcaption>Generador de memes</figcaption>
           </a>
           <a href="#" target="_blank">
-            <img src="Imágenes/imagenes verdes/match3.svg" alt="joystick" />
+            <img src="imagenes/imagenes proyectos/match3.svg" alt="joystick" />
             <figcaption>Match 3</figcaption>
           </a>
           <a href="#" target="_blank">
             <img
-              src="Imágenes/imagenes verdes/controlador de gastos.svg"
+              src="imagenes/imagenes proyectos/controlador de gastos.svg"
               alt="mujer estadisticas"
             />
             <figcaption>Controlador de gastos</figcaption>
           </a>
           <a href="#" target="_blank">
             <img
-              src="Imágenes/imagenes verdes/administradora de reuniones.svg"
+              src="imagenes/imagenes proyectos/administradora de reuniones.svg"
               alt="mujer con reloj"
             />
             <figcaption>Administrador de reuniones</figcaption>
           </a>
           <a href="#" target="_blank">
-            <img src="Imágenes/imagenes verdes/appsvg.svg" alt="celular app" />
+            <img src="imagenes/imagenes proyectos/appsvg.svg" alt="celular app" />
             <figcaption>Todo app</figcaption>
           </a>
           <a href="#" target="_blank">
             <img
-              src="Imágenes/imagenes verdes/movie.svg"
+              src="imagenes/imagenes proyectos/movie.svg"
               alt="mujeres mirando películas"
             />
             <figcaption>Buscador de películas</figcaption>
