cambio de clases

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     <header>
       <nav>
         <ul>
-          <li><a href="#holaID">HOLA</a></li>
-          <li><a href="#conocimientosID">CONOCIMIENTOS</a></li>
-          <li><a href="#proyectosID">PROYECTOS</a></li>
-          <li><a href="#contactoID" id="contact">CONTACTO</a></li>
+          <li><a href="#heroID">HOLA</a></li>
+          <li><a href="#knowledgeID">CONOCIMIENTOS</a></li>
+          <li><a href="#projectsID">PROYECTOS</a></li>
+          <li><a href="#contactID" id="contact">CONTACTO</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <section class="hero" id="holaID">
+      <section id="heroID">
         <div class="presentation">
           <h2>¡Hola! Soy</h2>
           <h1>Natalia Saidman</h1>
@@ -42,7 +42,7 @@
         </figure>
       </section>
 
-      <section class="section-knowledge" id="conocimientosID">
+      <section id="knowledgeID">
         <div class="header-knowledge">
           <h2>Mis conocimientos</h2>
           <p>
@@ -96,7 +96,7 @@
         </div>
       </section>
 
-      <section class="section-project" id="proyectosID">
+      <section id="projectsID">
         <div class="header-project">
           <h2>Mis proyectos</h2>
           <p>
@@ -152,7 +152,7 @@
         </div>
       </section>
 
-      <section class="section-contact" id="contactoID">
+      <section id="contactID">
         <div class="box-contact">
           <div class="contact">
             <h2>Contactame</h2>
@@ -255,10 +255,10 @@
       <div class="internal-list">
         <nav>
           <ul>
-            <li><a href="#holaID">HOLA</a></li>
-            <li><a href="#conocimientosID">CONOCIMIENTOS</a></li>
-            <li><a href="#proyectosID">PROYECTOS</a></li>
-            <li><a href="#contactoID">CONTACTO</a></li>
+            <li><a href="#heroID">HOLA</a></li>
+            <li><a href="#knowledgeID">CONOCIMIENTOS</a></li>
+            <li><a href="#projectsID">PROYECTOS</a></li>
+            <li><a href="#contactID">CONTACTO</a></li>
           </ul>
         </nav>
       </div>
