--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Portfolio</title>
+    <title>Portfolio Natalia Saidman</title>
   </head>
   <body>
+    <!-- Encabezado con links de navegación.-->
     <header>
       <nav>
         <ul>
@@ -29,7 +30,9 @@
         </ul>
       </nav>
     </header>
+    <!-- Comienza el main -->
     <main>
+      <!-- Primera sección: hero. Inlcuye presentación e imagen -->
       <section id="heroID">
         <div class="presentation">
           <h2>¡Hola! Soy</h2>
@@ -41,6 +44,8 @@
           <img src="imagenes/hero.jpeg" alt="mujer programando" />
         </figure>
       </section>
+
+      <!-- Segunda sección: conocimientos. Inlcuye encabezado e iconos de los lenguajes. -->
 
       <section id="knowledgeID">
         <div class="header-knowledge">
@@ -78,23 +83,24 @@
         </div>
       </section>
 
-      <section class="gif">
-        <div class="phrase">
+      <!-- Tercera sección: cita y gif -->
+
+      <section class="phrase-gif">
+        <div class="quote">
           <div id="lamp">🔥</div>
-          <p>
-            "He aprendido a arriesgarme a hacer cosas nuevas. El crecimiento y
-            la comodidad no pueden coexistir"
-          </p>
+          <blockquote>
+            <p>"He aprendido a arriesgarme a hacer cosas nuevas. El crecimiento y
+            la comodidad no pueden coexistir"</p>
+          </blockquote>
           <br />
           <cite>Virginia Rometti</cite>
         </div>
         <div class="container">
-          <img
-            src="imagenes/cita.gif"
-            alt="gif mujer con computadora"
-          />
+          <img src="imagenes/cita.gif" alt="gif mujer con computadora" />
         </div>
       </section>
+
+      <!-- Cuarta sección: Proyectos. Incluye un encabezado y la grilla de proyectos -->
 
       <section id="projectsID">
         <div class="header-project">
@@ -139,7 +145,10 @@
             <figcaption>Administrador de reuniones</figcaption>
           </a>
           <a href="#" target="_blank">
-            <img src="imagenes/imagenes proyectos/appsvg.svg" alt="celular app" />
+            <img
+              src="imagenes/imagenes proyectos/appsvg.svg"
+              alt="celular app"
+            />
             <figcaption>Todo app</figcaption>
           </a>
           <a href="#" target="_blank">
@@ -151,6 +160,8 @@
           </a>
         </div>
       </section>
+
+      <!-- Quinta sección: contacto. links de contacto y formulario -->
 
       <section id="contactID">
         <div class="box-contact">
@@ -251,6 +262,8 @@
         </div>
       </section>
     </main>
+
+    <!-- Footer: links de navegación y de contacto -->
     <footer>
       <div class="internal-list">
         <nav>
