--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <div class="presentation">
           <h2>¡Hola! Soy</h2>
           <h1>Natalia Saidman</h1>
-          <p>Desarrolladora, Lic. en Nutrición y fan de los juegos de mesa</p>
-          <a href="#proyectosID" class="button">LO QUE HAGO</a>
+          <p>Desarrolladora, Lic. en Nutrición y fanática de los juegos de mesa</p>
+          <a href="#projectsID" class="button">LO QUE HAGO</a>
         </div>
         <figure>
           <img src="imagenes/hero.jpeg" alt="mujer programando" />
@@ -220,7 +220,7 @@
             <h2>Escribime</h2>
             <form action="" method="GET">
               <div class="name">
-                <div class="nombre">
+                <div class="firstname">
                   <p>Nombre<span>*</span></p>
                   <input
                     type="text"
@@ -229,7 +229,7 @@
                     placeholder="p. ej.: Natalia"
                   />
                 </div>
-                <div class="apellido">
+                <div class="lastname">
                   <p>Apellido <span>*</span></p>
                   <input
                     type="text"
@@ -237,7 +237,6 @@
                     id="text-name"
                     placeholder="p. ej.: Saidman"
                   />
-                  <p></p>
                 </div>
               </div>
               <p>Email <span>*</span></p>
