--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       <nav>
         <!-- Menú de navegación -->
         <ul>
-          <li><a href="#heroID">HOLA</a></li>
-          <li><a href="#knowledgeID">CONOCIMIENTOS</a></li>
-          <li><a href="#projectsID">PROYECTOS</a></li>
-          <li><a href="#contactID" id="contact">CONTACTO</a></li>
+          <li><a href="#hero">HOLA</a></li>
+          <li><a href="#knowledge">CONOCIMIENTOS</a></li>
+          <li><a href="#projects">PROYECTOS</a></li>
+          <li><a href="#contact" id="contact-button">CONTACTO</a></li>
         </ul>
         <!-- Fin menú de navegación -->
       </nav>
@@ -41,15 +41,15 @@
     <!-- Comienza el main -->
     <main>
       <!-- Primera sección: hero. Inlcuye presentación e imagen -->
-      <section id="heroID">
+      <section id="hero">
         <div class="presentation">
-          <h2>¡Hola! Soy</h2>
-          <h1>Natalia Saidman</h1>
-          <p>
+          <h2 tabindex="0">¡Hola! Soy</h2>
+          <h1 tabindex="0">Natalia Saidman</h1>
+          <p tabindex="0">
             Desarrolladora, Lic. en Nutrición y fanática de los juegos de mesa
           </p>
           <a
-            href="#projectsID"
+            href="#projects"
             aria-label="Leer más sobre los proyectos"
             class="button"
             >LO QUE HAGO</a
@@ -63,38 +63,38 @@
 
       <!-- Segunda sección: conocimientos. Inlcuye encabezado e iconos de los lenguajes. -->
 
-      <section id="knowledgeID">
+      <section id="knowledge">
         <div class="header-knowledge">
-          <h2>Mis conocimientos</h2>
-          <p>
+          <h2 tabindex="0">Mis conocimientos</h2>
+          <p tabindex="0">
             Lo que más me gusta de la programación es dar soluciones a los
             problemas que se puedan presentar. Estas son mis habilidades Hard.
           </p>
         </div>
-        <div class="knowledge">
+        <div class="skills-grid">
           <div class="skill">
             <i class="devicon-html5-plain colored"></i>
-            <p>HTML 5</p>
+            <p tabindex="0">HTML 5</p>
           </div>
           <div class="skill">
             <i class="devicon-css3-plain colored"></i>
-            <p>CSS 3</p>
+            <p tabindex="0">CSS 3</p>
           </div>
           <div class="skill">
             <i class="devicon-sass-original colored"></i>
-            <p>Sass</p>
+            <p tabindex="0">Sass</p>
           </div>
           <div class="skill">
             <i class="devicon-javascript-plain colored"></i>
-            <p>JavasScript</p>
+            <p tabindex="0">JavasScript</p>
           </div>
           <div class="skill">
             <i class="devicon-react-original colored"></i>
-            <p>React</p>
+            <p tabindex="0">React</p>
           </div>
           <div class="skill">
             <i class="devicon-git-plain colored"></i>
-            <p>GIT</p>
+            <p tabindex="0">GIT</p>
           </div>
         </div>
       </section>
@@ -122,17 +122,17 @@
 
       <!-- Cuarta sección: Proyectos. Incluye un encabezado y la grilla de proyectos -->
 
-      <section id="projectsID">
+      <section id="projects">
         <div class="header-project">
-          <h2>Mis proyectos</h2>
-          <p>
+          <h2 tabindex="0">Mis proyectos</h2>
+          <p tabindex="0">
             El desarrollo web se logra con dedicación individual y trabajo en
             equipo. Cada uno de mis proyectos lo realicé con mucho compromiso,
             responsabilidad y en forma colaborativa.
           </p>
         </div>
         <!-- Grilla de proyectos -->
-        <div class="projects">
+        <div class="projects-grid">
           <a href="#" target="_blank">
             <img
               src="imagenes/imagenes proyectos/programadora.svg"
@@ -210,16 +210,16 @@
 
       <!-- Quinta sección: contacto. links de contacto y formulario -->
 
-      <section id="contactID">
+      <section id="contact">
         <div class="box-contact">
           <div class="contact">
-            <h2>Contactame</h2>
+            <h2 tabindex="0">Contactame</h2>
             <p>
               Para conocerme más y ponerse en contacto conmigo, me encuentran a
               través de mis redes sociales.
             </p>
             <div class="social-networks">
-              <ul aria-label="links de redes sociales">
+              <ul tabindex="0" aria-label="links de redes sociales">
                 <div>
                   <li>
                     <a
@@ -270,8 +270,8 @@
             </div>
           </div>
           <div class="contact">
-            <h2>Escribime</h2>
-            <form action="" method="GET">
+            <h2 tabindex="0">Escribime</h2>
+            <form tabindex="0" aria-label="Formulario" action="" method="GET">
               <div class="name">
                 <div class="firstname">
                   <p>Nombre<span>*</span></p>
@@ -327,10 +327,10 @@
       <div class="internal-list">
         <nav>
           <ul>
-            <li><a href="#heroID">HOLA</a></li>
-            <li><a href="#knowledgeID">CONOCIMIENTOS</a></li>
-            <li><a href="#projectsID">PROYECTOS</a></li>
-            <li><a href="#contactID">CONTACTO</a></li>
+            <li><a href="#hero">HOLA</a></li>
+            <li><a href="#knowledge">CONOCIMIENTOS</a></li>
+            <li><a href="#projects">PROYECTOS</a></li>
+            <li><a href="#contact">CONTACTO</a></li>
           </ul>
         </nav>
       </div>
